# penguin-pal

./: .gitignore  CODEX_GUIDE.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  setup-llvm.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  app_update.rs  codex_runtime.rs  codex_update.rs  desktop.rs  history.rs  lib.rs  research.rs  tray.rs  window.rs
src-tauri/src/agent/: agent_turn.rs  executor.rs  intent.rs  intent_classifier.rs  loop_planner.rs  loop_prompt.rs  mod.rs  model_adapter.rs  planner.rs  prompt.rs  router.rs  runtime_binding.rs  screen_context.rs  screen_planner.rs  session_turn.rs  task_store.rs  test_assertions.rs  test_loop_planner.rs  test_loop_prompt.rs  types.rs  vision_analyzer.rs  vision_context.rs  vision_types.rs  workspace_loop_planner.rs  workspace_loop_prompt.rs
src-tauri/src/ai/: guardrails.rs  mod.rs  provider.rs
src-tauri/src/audio/: mod.rs  model_manager.rs  recorder.rs  transcriber.rs  types.rs  whisper.rs
src-tauri/src/codex_config/: mod.rs  sessions.rs
src-tauri/src/control/: errors.rs  mod.rs  pending.rs  registry.rs  router.rs  shell.rs  system_registry.rs  types.rs
src-tauri/src/memory/: core_policy.rs  mod.rs  retrieval.rs  service.rs  store.rs  tests.rs  types.rs  write_back.rs
src-tauri/src/permission/: checker.rs  types.rs
src-tauri/src/rule_engine/: resolver.rs
src-tauri/src/security/: mod.rs  oauth.rs  policy.rs
src-tauri/src/shell_agent/: executor.rs  mod.rs  prompt.rs  state.rs
(+44 files in other folders)
